--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,11 @@
 {
   "parser": "babel-eslint",
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "prettier"
-  ],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
   "env": {
     "es6": true,
     "browser": true,
     "node": true,
     "jasmine": true
-
   },
   "parserOptions": {
     "sourceType": "module"
@@ -18,6 +13,7 @@
   "rules": {
     "space-before-function-paren": 0,
     "react/prop-types": 0,
-    "react/jsx-boolean-value": 0
+    "react/jsx-boolean-value": 0,
+    "no-console": [2, { "allow": ["info", "warn", "error"] }]
   }
 }
