--- a/example/package.json
+++ b/example/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "react-slate-medium-editor-example",
-  "homepage": "https://ntgussoni.github.io/react-slate-medium-editor",
+  "name": "react-slate-small-editor-example",
+  "homepage": "https://ntgussoni.github.io/react-slate-small-editor",
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-scripts": "^1.1.4",
-    "styled-components": "^4.1.3",
-    "react-slate-medium-editor": "file:.."
+    "react-slate-small-editor": "file:..",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
