--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-slate-medium-editor",
+  "name": "react-slate-small-editor",
   "version": "1.0.0",
-  "description": "WYSIWYG Medium-like editor for react ",
+  "description": "WYSIWYG small editor for react to use in comments or posts ",
   "author": "ntgussoni",
   "license": "MIT",
-  "repository": "ntgussoni/react-slate-medium-editor",
+  "repository": "ntgussoni/react-slate-small-editor",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
@@ -25,42 +25,42 @@
     "immutable": "^4.0.0-rc.12",
     "is-hotkey": "^0.1.4",
     "is-url": "^1.2.4",
-    "js-video-url-parser": "^0.3.1",
+    "js-video-url-parser": "^0.3.2",
     "slate": "^0.44.10",
-    "slate-plain-serializer": "^0.6.36",
+    "slate-plain-serializer": "^0.6.39",
     "slate-react": "^0.21.16",
     "styled-components": "4.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
     "@svgr/rollup": "^2.4.1",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.5",
     "cross-env": "^5.1.4",
     "eslint": "^5.0.1",
-    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-prettier": "^4.2.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "^1.1.4",
-    "rollup": "^0.64.1",
-    "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-commonjs": "^9.1.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "^3.0.1",
+    "rollup": "^1.11.3",
+    "rollup-plugin-babel": "^4.0.1",
+    "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-url": "^1.4.0"
   },
   "files": [
