--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
+  "homepage": "ntgussoni.github.io/react-slate-small-editor",
   "engines": {
     "node": ">=8",
     "npm": ">=5"
