--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "start": "rollup -c -w",
     "prepare": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -d example/build",
+    "analyze": "source-map-explorer 'dist/*.js'",
+    "eslint": "eslint ./src --ext .js"
   },
   "dependencies": {
     "immutable": "^4.0.0-rc.12",
@@ -27,8 +29,8 @@
     "is-url": "^1.2.4",
     "js-video-url-parser": "^0.3.2",
     "slate": "^0.44.10",
-    "slate-plain-serializer": "^0.6.39",
     "slate-react": "^0.21.16",
+    "source-map-explorer": "^1.8.0",
     "styled-components": "4.1.3"
   },
   "devDependencies": {
@@ -61,6 +63,7 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-url": "^1.4.0"
   },
   "files": [
